--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Daniel Souza</title>
     <link href="estilo.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="imagens/logo.png">
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
         <section id="daniel">
             <div class="lim limdaniel">
                  <div class="fotonome">
-                <img src="imagens/DANIEL.png">
+                <img src="imagens/daniel.png">
                 <h5>DANIEL SOUZA</h5>
                 </div>
                 <p id="tex">Daniel Souza, um talentoso fotógrafo com um olhar único para capturar momentos efêmeros, tem como principal objetivo eternizar as emoções mais genuínas de seus clientes. Especializado em fotografia de casamentos, ele busca contar a história de cada casal através de imagens que transbordam amor e felicidade. Além disso, Daniel se dedica a registrar a beleza da maternidade em ensaios de gestante, transformando a doce espera em memórias inesquecíveis. A fotografia de família também é uma paixão, onde ele cria registros autênticos que celebram a união e o afeto, entregando mais do que fotos, mas sim legados visuais que serão valorizados por gerações.</p> 
@@ -47,12 +48,12 @@
         <section id="port" class="lim">
             <h2 id="li">POTFÓLIO</h2>
             <div>
-                <img src="imagens/GRAVIDA1.png">
-                <img src="imagens/CASAMENTO1.png">
-                <img src="imagens/GRAVIDA2.png">
-                <img src="imagens/FAMILIA1.png">
-                <img src="imagens/GRAVIDA3.png">
-                <img src="imagens/CASAMENTO2.png">
+                <img src="imagens/gravida1.png">
+                <img src="imagens/casamento1.png">
+                <img src="imagens/gravida2.png">
+                <img src="imagens/familia1.png">
+                <img src="imagens/gravida3.png">
+                <img src="imagens/casamento2.png">
             </div>
            <p><a href="port.html">Clique para ver mais</a></p>
         </section>
@@ -65,17 +66,17 @@
     <hr>
          <div id="dep2"> 
             <article>
-                <img src="imagens/ISABELA.png">
+                <img src="imagens/isabela.png">
                 <h4>ISABELA MENDES</h4>
                 <p>MEU NOME É ISABELA MENDES, E ESTOU ABSOLUTAMENTE ENCANTADA COM O TRABALHO DO DANIEL SOUZA. QUANDO DECIDIMOS FAZER NOSSO ENSAIO DE GESTANTE NO VINHEDO, EU TINHA UMA VISÃO MUITO CLARA DO QUE QUERIA, E O DANIEL SUPEROU TODAS AS MINHAS EXPECTATIVAS! ELE NÃO APENAS CAPTUROU A LUZ PERFEITA E A BELEZA DO AMBIENTE, MAS TAMBÉM SOUBE ME DEIXAR SUPER Á VONTADE, TRANSFORMANDO O QUE PODERIA SER UM MOMENTO DE NERVOSISMO EM PURA ALEGRIA E CONEXÃO COM MEU BEBÊ. AS FOTOS FICARAM SIMPLEMENTE MÁGICAS, VERDADEIRAS OBRAS DE ARTE QUE VAMOS GUARDAR COM MUITO CARINHO PARA SEMPRE. DANIEL VOCÊ É UM ARTISTA INCRÍVEL!</p>
             </article>
             <article>
-                <img src="imagens/LUCAS.png">
+                <img src="imagens/lucas.png">
                 <h4>LUCAS SILVA</h4>
                 <p>MEU NOME É LUCAS SILVA E O DANIEL SOUZA CAPTUROU A ESSÊNCIA DA NOSSA FAMÍLIA DE FORMA INCRÍVEL TANTO EM ESTÚDIO QUANTO NA PRAIA. ELE É MUITO PROFISSIONAL E NOS DEIXOU SUPER À VONTADE, ATÉ AS CRIANÇAS! AS FOTOS SÃO TESOUROS DURADOUROS. RECOMENDO O DANIEL DE OLHOS FECHADOS, ELE TRANSFORMA INSTANTES EM HISTÓRIAS COM SENSIBILIDADE E ARTE.</p>
             </article>
             <article>
-                <img src="imagens/GABRIEL.png">
+                <img src="imagens/gabriel.png">
                 <h4>GABRIEL ALVES</h4>
                 <p>MEU NOME É GABRIEL ALVEZ E O DANIEL SOUZA FOI UMA ESCOLHA FANTÁSTICA PARA NOSSO CASAMENTO. ELE E SUA EQUIPE FORAM IMPECÁVEIS, CAPTURANDO CADA MOMENTO, DA IGREJA Á FESTA, COM UMA ENERGIA CONTAGIANTE. AS FOTOS SÃO AUTÊNTICAS E NOS FAZEM REVIVER TUDO. DANIEL É UM CONTADOR DE HISTÓRIAS VISUAL E SOMOS MUITO GRATOS POR ELE TER ETERNIZADO NOSSO GRANDE DIA COM MAESTRIA E SENSIBILIDADE.</p>
             </article>
@@ -85,27 +86,27 @@
             <h3 id="li3">CONTATOS</h3>
         <section id=cont>
             <article>
-                <img src="imagens/Whatsapp.png">
+                <img src="imagens/whatsapp.png">
                 <h5>(11) 998765-4321</h5>
             </article>
             <article>
-                <img src="imagens/Facebook.png">
+                <img src="imagens/facebook.png">
                 <h5>@FotografiasDanielSouza</h5>
             </article>
             <article>
-                <img src="imagens/Instagram.png">
+                <img src="imagens/instagram.png">
                 <h5>@dsfotografia_oficial</h5>
             </article>
             <article>
-                <img src="imagens/Email.png">
+                <img src="imagens/email.png">
                 <h5>dsfotografia.contato@email.com</h5>
             </article>
             <article>
-                <img src="imagens/Place.png">
+                <img src="imagens/place.png">
                 <h5>Rua das Palmeiras, 123, Centro, Brumado</h5>
             </article>
             <div>   
-                <img src="imagens/LOGO.png">
+                <img src="imagens/logo.png">
             </div>
         </section>
     </main>
