--- a/port.html
+++ b/port.html
@@ -26,12 +26,12 @@
         </article>
         <section id="por2">
         <div>
-                <img src="imagens/GRAVIDA1.png">
-                <img src="imagens/CASAMENTO1.png">
-                <img src="imagens/GRAVIDA2.png">
-                <img src="imagens/FAMILIA1.png">
-                <img src="imagens/GRAVIDA3.png">
-                <img src="imagens/CASAMENTO2.png">
+                <img src="imagens/gabriel.png">
+                <img src="imagens/casamento1.png">
+                <img src="imagens/gravida2.png">
+                <img src="imagens/familia1.png">
+                <img src="imagens/gravida3.png">
+                <img src="imagens/casamento2.png">
                 <img src="imagens/casamento3.png">
                 <img src="imagens/familia2.png">
                 <img src="imagens/gravida4.png">
