--- a/port.html
+++ b/port.html
@@ -28,7 +28,7 @@
         </article>
         <section id="por2">
         <div>
-                <img src="imagens/gabriel.png">
+                <img src="imagens/gravida1.png">
                 <img src="imagens/casamento1.png">
                 <img src="imagens/gravida2.png">
                 <img src="imagens/familia1.png">
