--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
      <div id="logo">
-        <a herf="./index.html"><img src="imagens/logo.png"></a>
+        <a herf="./index.html"><img src="imagens/logo2.png"></a>
      </div>
     </header>
     <nav>
