modificação no icon

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="imagens/logo.png">
+    <link rel="icon" type="image/png" href="imagens/logo2.png">
 </head>
 <body>
     <header>
      <div id="logo">
-        <a herf="./index.html"><img src="imagens/logo2.png"></a>
+        <a herf="./index.html"><img src="imagens/logo.png"></a>
      </div>
     </header>
     <nav>
