--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Souza</title>
     <link href="estilo.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
