Alteração de tags

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <hr>
     <main>
         <section id="daniel">
-            <div class="lim limdaniel">
+            <div class="container containerdaniel">
                  <div class="fotonome">
                 <img src="imagens/daniel.png">
                 <h5>DANIEL SOUZA</h5>
