--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="depcc">
         <div id="dep1">
             <h3 id="li2">DEPOIMENTOS</h3>
-            <h5 >dos nossos clientes</h5>
+            <h5 >Dos Nossos Clientes</h5>
         </div>
     <hr>
          <div id="dep2"> 
