--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <link rel="icon" type="image/png" href="imagens/logo2.png">
 </head>
 <body>
-    <header>
-     <div id="logo">
-        <a herf="./index.html"><img src="imagens/logo.png"></a>
-     </div>
+    <header id="logo">
+     
+        <a href="./index.html"><img src="imagens/logo.png"></a>
+    
     </header>
     <nav>
         <ul id="n">
