--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 </head>
 <body>
     <header id="logo">
-     
         <a href="./index.html"><img src="imagens/logo.png"></a>
-    
     </header>
     <nav>
         <ul id="n">
@@ -46,7 +44,7 @@
             <p><a href="hisdan.html">Clique para ver mais sobre a história do daniel</a></p> 
         </section>
     <hr>
-        <section id="port" class="lim">
+        <section id="port" class="container">
             <h2 id="li">POTFÓLIO</h2>
             <div>
                 <img src="imagens/gravida1.png">
@@ -65,7 +63,7 @@
             <h5 >Dos Nossos Clientes</h5>
         </div>
     <hr>
-         <div id="dep2"> 
+         <div id="dep2" class="container"> 
             <article>
                 <img src="imagens/isabela.png">
                 <h4>ISABELA MENDES</h4>
