--- a/index.html
+++ b/index.html
@@ -109,5 +109,10 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div id="forms">
+            <p><a href="forms.html">Clique para entrar em contato e marcar uma seção de fotos!</a></p>
+        </div>
+    </footer>
 </body>
 </html>
