--- a/hisdan.html
+++ b/hisdan.html
@@ -36,5 +36,32 @@ Fotografia de Família: A dinâmica familiar, com suas interações espontâneas
 Hoje, Daniel Souza Fotografia é sinônimo de excelência e sensibilidade, com um compromisso inabalável em transformar momentos passageiros em arte que perdura. Sua missão é clara: não apenas tirar fotos, mas contar histórias, evocar sentimentos e criar memórias que resistam ao teste do tempo, fazendo de cada álbum um tesouro inestimável.<br>
         </p>
     </main>
+    <footer>
+        <section id=cont>
+            <article>
+                <img src="imagens/whatsapp.png">
+                <h5>(11) 998765-4321</h5>
+            </article>
+            <article>
+                <img src="imagens/facebook.png">
+                <h5>@FotografiasDanielSouza</h5>
+            </article>
+            <article>
+                <img src="imagens/instagram.png">
+                <h5>@dsfotografia_oficial</h5>
+            </article>
+            <article>
+                <img src="imagens/email.png">
+                <h5>dsfotografia.contato@email.com</h5>
+            </article>
+            <article>
+                <img src="imagens/place.png">
+                <h5>Rua das Palmeiras, 123, Centro, Brumado</h5>
+            </article>
+            <div>   
+                <img src="imagens/logo.png">
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
